Adding workflow for Rabbot

--- a/RABBOT.html
+++ b/RABBOT.html
@@ -1,80 +1,112 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>RABBOT</title>
+    <link rel="stylesheet" href="css/style2.css" />
+    <link rel="icon" href="logo_White.png" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>RABBOT</title>
-  <link rel="stylesheet" href="css/style2.css">
-  <link rel="icon" href="logo_White.png">
-</head>
-
-<body>
-  <div class='wrapper'>
-  	<div id='RABBOT'>
-      <div class='mouse-container'>
-        <div class='mouse'>
-          <span class='scroll-down'></span>
+  <body>
+    <div class="wrapper">
+      <div id="RABBOT">
+        <div class="mouse-container">
+          <div class="mouse">
+            <span class="scroll-down"></span>
+          </div>
         </div>
       </div>
-  	</div>
-    <div id='content'>
-      <div id="closeicon">
-      <div class="outer">
-        <div class="inner">
-           <a href="portfolio.html"><label>Back</label></a>
+      <div id="content">
+        <div id="closeicon">
+          <div class="outer">
+            <div class="inner">
+              <a href="portfolio.html"><label>Back</label></a>
+            </div>
+          </div>
         </div>
+        <img src="Projects/RABBOT/RABBOT_1.jpg" class="img_small" />
+        <h1>RABBOT</h1>
+        <h3>
+          Created for iPads, Andriod phones and Gear VR using Unity3D, Node.js,
+          Socket.IO, Particle API, OculusVR, Vuforia, Blender, Adobe
+          Illustrator, Particle Photon, 3D printing and Laser cutting
+        </h3>
+        <h2>Summary</h2>
+        <img src="Projects/RABBOT/arappdesign.png" class="img_medium" />
+        <img src="Projects/RABBOT/RABBOT.gif" class="img_medium" />
+        <img src="Projects/RABBOT/RABBOT2.gif" class="img_medium" />
+        <p>
+          This thesis project explores the possibilities of generating shared
+          awareness in a virtual reality (VR) experience between a head-mounted
+          display (HMD) wearer and other observers in the same physical space by
+          merging wearable technology, augmented reality, asymmetric game design
+          and wireless communications in the internet of things (IoT). The final
+          outcome of this thesis project, RABBOT, features a modified VR
+          head-mounted display and three-player asymmetric mobile game
+          experiences with an embedded communication system to create
+          opportunities for shared awareness amongst players. In the game, the
+          participating observers can play cooperatively as Scientists to
+          against the HMD wearer who is playing the Rabbot. Overall this thesis
+          project argues that an engaging VR experience should not focus
+          exclusively on the HMD wearer but also include other audiences to
+          address and engage the relationships and interactions between them.
+        </p>
+        <p>
+          Full thesis paper can be found at
+          <a href="http://openresearch.ocadu.ca/id/eprint/2512/">here</a>
+        </p>
+
+        <h2>Objective</h2>
+        <p>
+          The isolating design of virtual reality (VR) head-mounted displays
+          (HMD) is typical in the single-player experience - immersing one into
+          a virtual environment. This often creates a situation in which only
+          one headset is available but no opportunities for engagement are made
+          accessible for other people nearby. This isolation in VR cuts off
+          social connections and awareness between the virtual world and
+          physical world, between the HMD wearers and other observers.
+          Additionally, the current offerings in the consumer electronics market
+          of the head-mounted display have a dull appearance, which also shows
+          the lack of attention in terms of design for other audiences.
+        </p>
+        <p>
+          This thesis is designed to address this problem and to explore the
+          possibilities of generating shared awareness in a VR experience
+          between the HMD wearer and other observers in the same physical space
+          by merging wearable technology, augmented reality, asymmetric game
+          design and wireless communications in the Internet of Things (IoT).
+          The principal objective of my thesis project is to argue that an
+          engaging VR experience need not solely focus on the HMD wearer but
+          also other third-party audiences, whether these are participating
+          observers or ambient observers.
+        </p>
+
+        <h2>Action</h2>
+        <img src="Projects/RABBOT/roadmap.jpg" class="img_medium" />
+        <img src="Projects/RABBOT/Methdology.jpg" class="img_medium" />
+        <img src="Projects/RABBOT/PrototypeMap.jpg" class="img_medium" />
+        <img src="Projects/RABBOT/SystemDiagram.jpg" class="img_medium" />
+        <img src="Projects/RABBOT/Workflow.jpg" class="img_medium" />
+        <img src="Projects/RABBOT/Rabbot3D.png" class="img_medium" />
+        <img src="Projects/RABBOT/object.png" class="img_medium" />
+
+        <h2>Exhibits</h2>
+        <img src="Projects/RABBOT/TMAC.png" class="img_medium" />
+        <p class="caption"><i>What the Futures?</i></p>
+        <p class="caption">Toronto Media Arts Centre, April 2019</p>
+        <img src="Projects/RABBOT/LevelUp.png" class="img_medium" />
+        <p class="caption"><i>LevelUp</i></p>
+        <p class="caption">Design Exchange, April 2019</p>
+        <img src="Projects/RABBOT/FITC.png" class="img_medium" />
+        <p class="caption"><i>FITC</i></p>
+        <p class="caption">Hilton Toronto, April 2019</p>
+        <img src="Projects/RABBOT/GradEX.png" class="img_medium" />
+        <p class="caption"><i>GradEX</i></p>
+        <p class="caption">OCAD University, May 2019</p>
+        <img src="Projects/RABBOT/FutureEducation.png" class="img_medium" />
+        <p class="caption"><i>Future Education Festival</i></p>
+        <p class="caption">Evergreen Brick Works, May 2019</p>
       </div>
-      </div>
-      <img src="Projects/RABBOT/RABBOT_1.jpg" class='img_small'>
-      <h1>RABBOT</h1>
-      <h3>Created for iPads, Andriod phones and Gear VR using Unity3D, Node.js, Socket.IO, Particle API, OculusVR, Vuforia, Blender, Adobe Illustrator, Particle Photon, 3D printing and Laser cutting
-      </h3>
-      <h2>Summary</h2>
-      <img src="Projects/RABBOT/arappdesign.png" class='img_medium'>
-      <img src="Projects/RABBOT/RABBOT.gif" class='img_medium'>
-      <img src="Projects/RABBOT/RABBOT2.gif" class='img_medium'>
-  <p>This thesis project explores the possibilities of generating shared awareness in a virtual reality (VR) experience between a head-mounted display (HMD) wearer and other observers in the same physical space by merging wearable technology, augmented reality, asymmetric game design and wireless communications in the internet of things (IoT). The final outcome of this thesis project, RABBOT, features a modified VR head-mounted display and three-player asymmetric mobile game experiences with an embedded communication system to create opportunities for shared awareness amongst players. In the game, the participating observers can play cooperatively as Scientists to against the HMD wearer who is playing the Rabbot. Overall this thesis project argues that an engaging VR experience should not focus exclusively on the HMD wearer but also include other audiences to address and engage the relationships and interactions between them.</p>
-  <p>Full thesis paper can be found at <a href="http://openresearch.ocadu.ca/id/eprint/2512/">here</a></p>
-
-      <h2>Objective</h2>
-<p>The isolating design of virtual reality (VR) head-mounted displays (HMD) is typical
-in the single-player experience - immersing one into a virtual environment. This often creates
-a situation in which only one headset is available but no opportunities for engagement are
-made accessible for other people nearby. This isolation in VR cuts off social connections and
-awareness between the virtual world and physical world, between the HMD wearers and
-other observers. Additionally, the current offerings in the consumer electronics market of the
-head-mounted display have a dull appearance, which also shows the lack of attention in terms
-of design for other audiences. </p>
-<p>
-This thesis is designed to address this problem and to explore the possibilities of
-generating shared awareness in a VR experience between the HMD wearer and other
-observers in the same physical space by merging wearable technology, augmented reality,
-asymmetric game design and wireless communications in the Internet of Things (IoT). The
-principal objective of my thesis project is to argue that an engaging VR experience need not
-solely focus on the HMD wearer but also other third-party audiences, whether these are
-participating observers or ambient observers. </p>
-
-      <h2>Action</h2>
-      <img src="Projects/RABBOT/roadmap.jpg" class='img_medium'>
-      <img src="Projects/RABBOT/Methdology.jpg" class='img_medium'>
-      <img src="Projects/RABBOT/PrototypeMap.jpg" class='img_medium'>
-      <img src="Projects/RABBOT/SystemDiagram.jpg" class='img_medium'>
-      <img src="Projects/RABBOT/Rabbot3D.png" class='img_medium'>
-      <img src="Projects/RABBOT/object.png" class='img_medium'>
-
-      <h2>Exhibits</h2>
-      <img src="Projects/RABBOT/TMAC.png" class='img_medium'>
-      <p class="caption"><i>What the Futures?</i></p><p class="caption">Toronto Media Arts Centre, April 2019</p>
-      <img src="Projects/RABBOT/LevelUp.png" class='img_medium'>
-      <p class="caption"><i>LevelUp</i></p><p class="caption">Design Exchange, April 2019</p>
-      <img src="Projects/RABBOT/FITC.png" class='img_medium'>
-      <p class="caption"><i>FITC</i></p><p class="caption">Hilton Toronto, April 2019</p>
-      <img src="Projects/RABBOT/GradEX.png" class='img_medium'>
-      <p class="caption"><i>GradEX</i></p><p class="caption">OCAD University, May 2019</p>
-      <img src="Projects/RABBOT/FutureEducation.png" class='img_medium'>
-      <p class="caption"><i>Future Education Festival</i></p><p class="caption">Evergreen Brick Works, May 2019</p>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
