Fixing error on Rabbot

--- a/RABBOT.html
+++ b/RABBOT.html
@@ -104,7 +104,7 @@
         <h4>3.Workflow</h4>
         <img src="Projects/RABBOT/Workflow.jpg" class="img_large" />
         <h4>4.Colors & Typography</h4>
-        <img src="Projects/RABBOT/Background.jpg" class="img_large" />
+        <img src="Projects/RABBOT/Background.JPG" class="img_large" />
         <img src="Projects/RABBOT/ColorsTypography.jpg" class="img_medium" />
         <h4>5.Branding & UI</h4>
         <img src="Projects/RABBOT/RabbotBranding.jpg" class="img_large" />
