Fixing error on Rabbot psage

--- a/RABBOT.html
+++ b/RABBOT.html
@@ -108,7 +108,7 @@
         <img src="Projects/RABBOT/ColorsTypography.jpg" class="img_medium" />
         <h4>5.Branding & UI</h4>
         <img src="Projects/RABBOT/RabbotBranding.jpg" class="img_large" />
-        <img src="Projects/RABBOT/RabbotUI.JPG" class="img_large" />
+        <img src="Projects/RABBOT/RabbotUI.jpg" class="img_large" />
         <img src="Projects/RABBOT/Rabbot3D.png" class="img_medium" />
         <img src="Projects/RABBOT/object.png" class="img_medium" />
 
