--- a/RABBOT.html
+++ b/RABBOT.html
@@ -52,7 +52,7 @@
           address and engage the relationships and interactions between them.
         </p>
         <p>
-          Full thesis paper can be found at
+          Full thesis paper can be found
           <a href="http://openresearch.ocadu.ca/id/eprint/2512/">here</a>
         </p>
 
