--- a/UniverseConcert.html
+++ b/UniverseConcert.html
@@ -1,57 +1,72 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Universe Concert</title>
+    <link rel="stylesheet" href="css/style2.css" />
+    <link rel="icon" href="logo_White.png" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Universe Concert</title>
-  <link rel="stylesheet" href="css/style2.css">
-  <link rel="icon" href="logo_White.png">
-</head>
-
-<body>
-  <div class='wrapper'>
-  	<div id='UniverseConcert'>
-      <div class='mouse-container'>
-        <div class='mouse'>
-          <span class='scroll-down'></span>
+  <body>
+    <div class="wrapper">
+      <div id="UniverseConcert">
+        <div class="mouse-container">
+          <div class="mouse">
+            <span class="scroll-down"></span>
+          </div>
         </div>
       </div>
-  	</div>
-    <div id='content'>
-      <div id="closeicon">
-      <div class="outer">
-        <div class="inner">
-           <a href="portfolio.html"><label>Back</label></a>
+      <div id="content">
+        <div id="closeicon">
+          <div class="outer">
+            <div class="inner">
+              <a href="portfolio.html"><label>Back</label></a>
+            </div>
+          </div>
         </div>
+        <div class="video-wrapper">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/KxJNNCnJom8"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+        <img
+          src="Projects/UniverseConcert/UniverseConcert_1.png"
+          class="img_small"
+        />
+        <h1>Universe Concert</h1>
+        <h3>Created using Unity3D, Socket.IO and Adobe Photoshop</h3>
+        <h2>Summary</h2>
+        <p>
+          Hello dreamers! Have you ever wondered what the galaxy smells like and
+          tastes like? Even sounds like? Have you ever dreamed of being a star
+          in the galaxy? The answers are all in the small cup And even more
+          exciting, may we invite you to get your smartphone and enter
+          wray.pro/Galaxy from your browser. you can control your own star by
+          holding it and turning around. Today we are going to make your dream
+          come true, enjoy –Intro
+        </p>
+        <p>
+          This is a multi-sensory performance which took place at the Immersive
+          Vision Theatre (Dome). People are invited to use their mobile phone to
+          interact with the dome theatre by turning into a star in the universe.
+          After entering the URL, the audiences can control their own star and
+          make a unique beautiful sound, which will eventually become a concert.
+          At the same time, raspberry rum jelly shots were served to make the
+          multisensory experience because scientific research shows that the
+          center of Milky Way smells like raspberry and taste like rum.
+        </p>
+        <p>Group members: Sam Wray (2XAA) and Yiyi shao</p>
+        <p>My responsibility: User experience design and Artwork design</p>
+        <img
+          src="Projects/UniverseConcert/UniverseConcert.gif"
+          class="img_small"
+        />
       </div>
-      </div>
-      <div class="video-wrapper">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/KxJNNCnJom8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
-      <img src="Projects/UniverseConcert/UniverseConcert_1.png" class='img_small'>
-      <h1>Universe Concert</h1>
-      <h3>Created using Unity3D, Socket.IO and Adobe Photoshop</h3>
-      <h2>Summary</h2>
-  <p>Hello dreamers
-Have you ever wondered what the galaxy smells like and tastes like? Even sounds like?
-Have you ever dreamed of being a star in the galaxy?
-The answers are all in the small cup
-And even more exciting, may we invite you to get your smartphone and enter wray.pro/Galaxy from your browser. you can control your own star by holding it and turning around
-Today we are going to make your dream come true, enjoy
-–Intro
-It’s a multi-sensory performance which took place at the Immersive Vision Theatre (Dome). People are invited to use their mobile phone to interact with the dome by becoming a star in the universe. After entering the URL, everyone can control their own star and make a beautiful sound, it has eventually become a concert. At the same time, raspberry rum jelly shots were served to make the multisensory experience as the center of Milky Way smells like raspberry and taste like rum.
-</p>
-<p>Group members: Sam Wray (2XAA) and Yiyi shao</p>
-<p>My responsibility: User experience design and Artwork design</p>
-<img src="Projects/UniverseConcert/UniverseConcert.gif" class='img_small'>
-
-      <h1 class='footer'>...</h1>
     </div>
-  </div>
-</body>
-
-
-
-</body>
-
+  </body>
 </html>
