Adding Dream World AR

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,9 +34,13 @@
       <button class="btn-filter" data-filter=".Wearables">Wearables</button>
       <button class="btn-filter" data-filter=".Game">Game</button>
       <button class="btn-filter" data-filter=".MR">Mixed Reality</button>
-      <button class="btn-filter" data-filter=".GraphicDesign">Graphic Design</button>
+      <button class="btn-filter" data-filter=".GraphicDesign">
+        Graphic Design
+      </button>
       <button class="btn-filter" data-filter=".Animation">Animation</button>
-      <button class="btn-filter" data-filter=".Installation">Installation</button>
+      <button class="btn-filter" data-filter=".Installation">
+        Installation
+      </button>
     </div>
     <div class="wrap">
       <div class="grid-sizer"></div>
@@ -57,6 +61,16 @@
             <div class="name">DiveIntoDigital</div>
             <div class="memo">OCAD University, Toronto</div>
             <div class="date">2018 March</div>
+          </div>
+        </div>
+      </a>
+      <a href="DreamWorld.html">
+        <div class="grid-item MR">
+          <img src="Projects/DreamWorld/DreamWorld.gif" alt="" />
+          <div class="info-wrapper">
+            <div class="name">DreamWorld AR</div>
+            <div class="memo">Toronto</div>
+            <div class="date">2019 July</div>
           </div>
         </div>
       </a>
