--- a/DreamWorld.html
+++ b/DreamWorld.html
@@ -24,7 +24,7 @@
             </div>
           </div>
         </div>
-        <img src="Projects/DreamWorld/DreamWorld.jpg" class="img_small" />
+        <img src="Projects/DreamWorld/DreamWorld.JPG" class="img_small" />
         <h1>DreamWorld AR</h1>
         <h3>
           Created for iPhones using Unity3D, ARFoundation, ARKit, XCode, Adobe
