--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
         </div>
       </a>
       <a href="DreamWorld.html">
-        <div class="grid-item MR">
+        <div class="grid-item MR Animation">
           <img src="Projects/DreamWorld/DreamWorld.gif" alt="" />
           <div class="info-wrapper">
             <div class="name">DreamWorld AR</div>
