Updating CV and some description of projects

--- a/about.html
+++ b/about.html
@@ -46,14 +46,16 @@
         </p>
         <h1>Exhibits, Talks & Workshops</h1>
         <p class="About">
-          <b>IUW</b> 2018 Speaker <br /><b>DF Openshow</b> 2018,2019 Exhibitor<br />
-          <b>Dames Making Games & Social Body Lab</b> 2018,2019 Workshop instructor <br />
+          <b>IUW</b> 2018 Speaker <br /><b>DF Openshow</b> 2018,2019
+          Exhibitor<br />
+          <b>Dames Making Games & Social Body Lab</b> 2018,2019 Workshop
+          instructor <br />
           <b>WTF – What the Futures?</b> 2019 Exhibitor<br />
           <b>LevelUp </b> 2019 Exhibitor <br />
           <b>FITC </b> 2019 Exhibitor <br />
           <b>GradEX </b> 2019 Exhibitor <br />
           <b>Future Education Festival </b>2019 Exhibitor <br />
-          <b>VRTO</b> 2019 Workshop instructor
+          <b>VRTO</b> 2019 Workshop facilitator
         </p>
         <h1>Resume/CV</h1>
 
@@ -72,10 +74,16 @@
             <a href="https://github.com/Yiyis" class="fa fa-lg fa-github"></a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/yiyishao/" class="fa fa-lg fa-linkedin"></a>
+            <a
+              href="https://www.linkedin.com/in/yiyishao/"
+              class="fa fa-lg fa-linkedin"
+            ></a>
           </li>
           <li>
-            <a href="https://www.instagram.com/drunkcatthepluto/" class="fa fa-lg fa-instagram"></a>
+            <a
+              href="https://www.instagram.com/drunkcatthepluto/"
+              class="fa fa-lg fa-instagram"
+            ></a>
           </li>
         </ul>
       </div>
@@ -85,17 +93,25 @@
     <div id="particles-js"></div>
 
     <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.2/lottie.js"></script>
-    <script type="text/javascript"  src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.2/lottie.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"
+    ></script>
     <script src="js/index.js"></script>
 
     <footer>
       <div class="footer">
-        <small>&copy; Yiyi Shao
+        <small
+          >&copy; Yiyi Shao
           <script type="text/javascript">
             var today = new Date();
             var year = today.getFullYear();
-            document.write(year);</script>, All Rights Reserved
+            document.write(year);</script
+          >, All Rights Reserved
         </small>
       </div>
     </footer>
