--- a/RABBOT.html
+++ b/RABBOT.html
@@ -36,12 +36,10 @@
         <img src="Projects/RABBOT/RABBOT.gif" class="img_large" />
         <img src="Projects/RABBOT/RABBOT2.gif" class="img_medium" />
         <p>
-          This thesis project explores the possibilities of generating shared
-          awareness in a virtual reality (VR) experience between a head-mounted
-          display (HMD) wearer and other observers in the same physical space by
-          merging wearable technology, augmented reality, asymmetric game design
-          and wireless communications in the internet of things (IoT). The final
-          outcome of this thesis project, RABBOT, features a modified VR
+          RABBOT is my thesis project exploring the possibilities of generating
+          shared awareness in a virtual reality (VR) experience between a
+          head-mounted display (HMD) wearer and other observers in the same
+          physical space. The final outcome of RABBOT features a modified VR
           head-mounted display and three-player asymmetric mobile game
           experiences with an embedded communication system to create
           opportunities for shared awareness amongst players. In the game, the
