Updating CV and projects

--- a/Mai.html
+++ b/Mai.html
@@ -35,7 +35,10 @@
         </div>
         <img src="Projects/Mai/Mai_1.jpg" class="img_small" />
         <h1>Mai</h1>
-        <h3>Created using Unity3D, Blender and Arduino</h3>
+        <h3>
+          Created using Unity3D, Blender3D, Adobe Photoshop, projector, Arduino,
+          LED, capactive and proximity sensors.
+        </h3>
         <h2>Summary</h2>
         <p>
           Mai is an interactive art installation focusing on the theme of the
@@ -85,11 +88,15 @@
         <img src="Projects/Mai/Mai_1.gif" class="img_medium" />
         <p>
           In-lieu with a fusion of Chinese calligraphy and arts, the ink
-          resembles smog and polluted air. By visualizing particle matter in the
-          air from 2012 in Shanghai, I want to show how smog influenced the
-          environment in China. Past data of PM2.5 is not a waste that people
-          will gradually forget but can be changed into things of value and
-          aesthetical.
+          resembles smog and polluted air that created with scanner and
+          Photoshop. By visualizing particle matter in the air from 2012 in
+          Shanghai, I want to show how smog influenced the environment in China.
+          The visualization is a scene I composed in Unity3D that looping the
+          XML data.
+        </p>
+        <p>
+          The lantern and a bottle of plant filled with water are controlled by
+          Arduino that having serial communications with Unity3D.
         </p>
         <h2>Exhibits</h2>
         <img src="Projects/Mai/Mai_2.jpg" class="img_medium" />
