Adding links to Course Icon project

--- a/CourseIcon.html
+++ b/CourseIcon.html
@@ -1,55 +1,72 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>CourseIcon</title>
+    <link rel="stylesheet" href="css/style2.css" />
+    <link rel="icon" href="logo_White.png" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>CourseIcon</title>
-  <link rel="stylesheet" href="css/style2.css">
-  <link rel="icon" href="logo_White.png">
-</head>
-
-<body>
-  <div class='wrapper'>
-  	<div id='CourseIcon'>
-      <div class='mouse-container'>
-        <div class='mouse'>
-          <span class='scroll-down'></span>
+  <body>
+    <div class="wrapper">
+      <div id="CourseIcon">
+        <div class="mouse-container">
+          <div class="mouse">
+            <span class="scroll-down"></span>
+          </div>
         </div>
       </div>
-  	</div>
-    <div id='content'>
-      <div id="closeicon">
-      <div class="outer">
-        <div class="inner">
-           <a href="portfolio.html"><label>Back</label></a>
+      <div id="content">
+        <div id="closeicon">
+          <div class="outer">
+            <div class="inner">
+              <a href="portfolio.html"><label>Back</label></a>
+            </div>
+          </div>
         </div>
+        <img src="Projects/CourseIcon/CourseIcon.jpg" class="img_small" />
+        <h1>Icon Design</h1>
+        <h3>Created using Adobe Illustrator</h3>
+        <h2>Summary</h2>
+        <p>
+          Icon design for Plymouth University online course in iTunes U:
+          <a
+            href="https://itunes.apple.com/ca/course/ios-development-in-swift/id950659946"
+            >iOS Development in Swift</a
+          >
+          and
+          <a
+            href="https://itunes.apple.com/ca/course/digital-electronics-vhdl/id848429948"
+            >Digital Electronics & VHDL</a
+          >
+        </p>
+
+        <h2>Goal</h2>
+        <p>
+          Design a new icon/cover for the online course (Swift development and
+          VHDL development) around the course content within the university's
+          branding to attract more users.
+        </p>
+
+        <h2>Outcome</h2>
+        <p>
+          Online courses with the new design were featured on the font page with
+          siginificant traffics and downloads.
+        </p>
+        <img src="Projects/CourseIcon/CourseIcon_4.png" class="img_medium" />
+        <img src="Projects/CourseIcon/CourseIcon_5.png" class="img_medium" />
+        <img src="Projects/CourseIcon/CourseIcon_2.jpg" class="img_medium" />
+        <p class="caption">Flyer design</p>
+        <img
+          src="Projects/CourseIcon/CourseIcon_flyer.jpg"
+          class="img_medium"
+        />
+        <p class="caption">Banner design</p>
+        <img
+          src="Projects/CourseIcon/CourseIcon_banner.jpg"
+          class="img_medium"
+        />
       </div>
     </div>
-      <img src="Projects/CourseIcon/CourseIcon.jpg" class='img_small'>
-      <h1>Icon Design</h1>
-      <h3>Created using Adobe Illustrator</h3>
-      <h2>Summary</h2>
-  <p>
-    Icon design for Plymouth University online course in iTunes U
-  </p>
-
-      <h2>Goal</h2>
-      <p>
-        Design a new icon/cover for the online course (Swift development and VHDL development) around the course content within the university's branding to attract more users.
-      </p>
-
-      <h2>Outcome</h2>
-      <p>Online courses with the new design were featured on the font page with siginificant traffics and downloads.</p>
-        <img src="Projects/CourseIcon/CourseIcon_4.png" class='img_medium'>
-        <img src="Projects/CourseIcon/CourseIcon_5.png" class='img_medium'>
-        <img src="Projects/CourseIcon/CourseIcon_2.jpg" class='img_medium'>
-        <p class="caption">Flyer design</p>
-        <img src="Projects/CourseIcon/CourseIcon_flyer.jpg" class='img_medium'>
-        <p class="caption">Banner design</p>
-        <img src="Projects/CourseIcon/CourseIcon_banner.jpg" class='img_medium'>
-
-
-
-</body>
-
+  </body>
 </html>
