Replacing thumbnail image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="title" content="Yiyi Shao" />
     <meta
       name="description"
-      content="Yiyi Shao, Maker | Developer | Designer, OCAD University "
+      content="Yiyi Shao, Maker | Developer | Designer"
     />
     <meta
       name="keywords"
@@ -21,18 +21,18 @@
     <meta property="og:title" content="Yiyi Shao" />
     <meta
       property="og:description"
-      content="Yiyi Shao, Maker | Developer | Designer, OCAD University "
+      content="Yiyi Shao, Maker | Developer | Designer"
     />
-    <meta property="og:image" content="Yiyi.JPG" />
+    <meta property="og:image" content="thumbnail.jpg" />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://yiyishao.org/" />
     <meta property="twitter:title" content="Yiyi Shao" />
     <meta
       property="twitter:description"
-      content="Yiyi Shao, Maker | Developer | Designer, OCAD University "
+      content="Yiyi Shao, Maker | Developer | Designer"
     />
-    <meta property="twitter:image" content="Yiyi.JPG" />
+    <meta property="twitter:image" content="thumbnail.jpg" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="icon" href="logo_White.png" />
