--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
       property="og:description"
       content="Yiyi Shao, Maker | Developer | Designer"
     />
-    <meta property="og:image" content="thumbnail.jpg" />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/Yiyis/Yiyis.github.io/master/thumbnail.jpg"
+    />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://yiyishao.org/" />
@@ -32,7 +35,10 @@
       property="twitter:description"
       content="Yiyi Shao, Maker | Developer | Designer"
     />
-    <meta property="twitter:image" content="thumbnail.jpg" />
+    <meta
+      property="twitter:image"
+      content="https://raw.githubusercontent.com/Yiyis/Yiyis.github.io/master/thumbnail.jpg"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="icon" href="logo_White.png" />
