Raplacing thumbnail url

--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@
       property="og:description"
       content="Yiyi Shao, Maker | Developer | Designer"
     />
-    <meta
-      property="og:image"
-      content="https://raw.githubusercontent.com/Yiyis/Yiyis.github.io/master/thumbnail.jpg"
-    />
+    <meta property="og:image" content="https://yiyishao.org/thumbnail.jpg" />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://yiyishao.org/" />
@@ -37,7 +34,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://raw.githubusercontent.com/Yiyis/Yiyis.github.io/master/thumbnail.jpg"
+      content="https://yiyishao.org/thumbnail.jpg"
     />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
