Replacing icon of  the website for readability on both light and dark style browser tab

--- a/DiveIntoDigital.html
+++ b/DiveIntoDigital.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>DiveIntoDigital</title>
     <link rel="stylesheet" href="css/style2.css" />
-    <link rel="icon" href="logo_White.png" />
+    <link rel="icon" href="logo_icon.png" />
   </head>
 
   <body>
