--- a/ScholarshipPromotion.html
+++ b/ScholarshipPromotion.html
@@ -1,43 +1,54 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Scholarship Promotion</title>
+    <link rel="stylesheet" href="css/style2.css" />
+    <link rel="icon" href="logo_icon.png" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Scholarship Promotion</title>
-  <link rel="stylesheet" href="css/style2.css">
-  <link rel="icon" href="logo_White.png">
-</head>
-
-<body>
-  <div class='wrapper'>
-  	<div id='ScholarshipPromotion'>
-      <div class='mouse-container'>
-        <div class='mouse'>
-          <span class='scroll-down'></span>
+  <body>
+    <div class="wrapper">
+      <div id="ScholarshipPromotion">
+        <div class="mouse-container">
+          <div class="mouse">
+            <span class="scroll-down"></span>
+          </div>
         </div>
       </div>
-  	</div>
-    <div id='content'>
-      <div id="closeicon">
-      <div class="outer">
-        <div class="inner">
-           <a href="portfolio.html"><label>Back</label></a>
+      <div id="content">
+        <div id="closeicon">
+          <div class="outer">
+            <div class="inner">
+              <a href="portfolio.html"><label>Back</label></a>
+            </div>
+          </div>
         </div>
+        <img
+          src="Projects/ScholarshipPromotion/ScholarshipPromotion.png"
+          class="img_small"
+        />
+        <h1>Scholarship Promotion Design</h1>
+        <h3>Created using Adobe Illustrator, Adobe Photoshop</h3>
+        <h2>Summary</h2>
+        <p>
+          Poster and postcard design for Scholarship Promotion at Plymouth
+          University
+        </p>
+
+        <img
+          src="Projects/ScholarshipPromotion/ScholarshipPromotionPoster_2.jpg"
+          class="img_medium"
+        />
+        <img
+          src="Projects/ScholarshipPromotion/ScholarshipPromotionPostcard_1.jpg"
+          class="img_medium"
+        />
+        <img
+          src="Projects/ScholarshipPromotion/ScholarshipPromotionPostcard_2.jpg"
+          class="img_medium"
+        />
       </div>
     </div>
-      <img src="Projects/ScholarshipPromotion/ScholarshipPromotion.png" class='img_small'>
-      <h1>Scholarship Promotion Design</h1>
-      <h3>Created using Adobe Illustrator, Adobe Photoshop</h3>
-      <h2>Summary</h2>
-  <p>
-    Poster and postcard design for Scholarship Promotion at Plymouth University
-  </p>
-
-        <img src="Projects/ScholarshipPromotion/ScholarshipPromotionPoster_2.jpg" class='img_medium'>
-        <img src="Projects/ScholarshipPromotion/ScholarshipPromotionPostcard_1.jpg" class='img_medium'>
-        <img src="Projects/ScholarshipPromotion/ScholarshipPromotionPostcard_2.jpg" class='img_medium'>
-
-
-</body>
-
+  </body>
 </html>
