--- a/Sleepers.html
+++ b/Sleepers.html
@@ -1,60 +1,89 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Sleepers</title>
+    <link rel="stylesheet" href="css/style2.css" />
+    <link rel="icon" href="logo_icon.png" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Sleepers</title>
-  <link rel="stylesheet" href="css/style2.css">
-  <link rel="icon" href="logo_White.png">
-</head>
-
-<body>
-  <div class='wrapper'>
-  	<div id='Sleepers'>
-      <div class='mouse-container'>
-        <div class='mouse'>
-          <span class='scroll-down'></span>
+  <body>
+    <div class="wrapper">
+      <div id="Sleepers">
+        <div class="mouse-container">
+          <div class="mouse">
+            <span class="scroll-down"></span>
+          </div>
         </div>
       </div>
-  	</div>
-    <div id='content'>
-      <div id="closeicon">
-      <div class="outer">
-        <div class="inner">
-           <a href="portfolio.html"><label>Back</label></a>
+      <div id="content">
+        <div id="closeicon">
+          <div class="outer">
+            <div class="inner">
+              <a href="portfolio.html"><label>Back</label></a>
+            </div>
+          </div>
         </div>
+        <img src="Projects/Sleepers/Sleepers_1.jpg" class="img_small" />
+        <h1>Sleepers</h1>
+        <h3>
+          Created using Particle photon, REST API, IFTTT, C++ and Laser cutting
+        </h3>
+        <h2>Summary</h2>
+        <p>
+          A experimental research project at Social Body Lab. Sleepers are
+          designed to keep the user from staying up too late. It will send
+          messages of “It’s time to go to bed” continuously to the user after a
+          preset time. Only when the user goes to the bed and not wearing
+          Sleepers, the user’s phone will stop getting those messages.
+        </p>
+        <p>
+          Full report can be found at
+          <a href="http://socialbodylab.com/sleepers/">here</a>
+        </p>
+
+        <h2>Objective</h2>
+        <p>Wearability:</p>
+        <ul>
+          <li>
+            Aesthetic: Aesthetic is the main goal of Sleepers, we try to find a
+            way to combine digital components into soft fabrics. The appearance
+            of sleepers wouldn’t remind any of the electronics at the first
+            impression as they are seamlessly embedded within the interlayer of
+            the fabrics. Sleepers are minimalist design with just two pieces of
+            white felts. Geometric flower patterns are designed to go with the
+            led on particle photon on the top, to show if the slippers are
+            online and functional.
+          </li>
+          <li>
+            Comfort: Comfort is also another main goal when designing Sleepers
+            as slippers themselves are supposed to be cozy when wearing at home,
+            so comfortability and lightweight are the crucial elements. As the
+            fact that human feet are very sensitive especially most people like
+            to wear slippers with bare feet so we developed the layering
+            technique to work with the rigid digital components.
+          </li>
+          <li>
+            Easy to use: Sleepers are very easy to use, the functionality is
+            very simple just to focusing on whether it has been worn. The user
+            can plug in the mini USB cable to charge the battery when it’s out
+            of power.
+          </li>
+        </ul>
+        <p>
+          However, there are some limitations and future improvements for the
+          Sleepers. The first one is the improvement for the position of
+          charging port, either to find a way to extend the mini USB port or add
+          an external led to replacing the onboard RGB status LED. The second
+          one is the improvement of the power switch, it should be less
+          electrical appearance.
+        </p>
+
+        <h2>Action</h2>
+        <img src="Projects/Sleepers/Sleepers_2.jpg" class="img_medium" />
+        <img src="Projects/Sleepers/Sleepers_3.jpg" class="img_medium" />
+        <p></p>
       </div>
-      </div>
-      <img src="Projects/Sleepers/Sleepers_1.jpg" class='img_small'>
-      <h1>Sleepers</h1>
-      <h3>Created using Particle photon, REST API, IFTTT, C++ and Laser cutting</h3>
-      <h2>Summary</h2>
-  <p>
-    A experimental research project at Social Body Lab.
-    Sleepers are designed to keep the user from staying up too late. It will send messages of “It’s time to go to bed” continuously to the user after a preset time. Only when the user goes to the bed and not wearing Sleepers, the user’s phone will stop getting those messages.
-  </p>
-  <p>Full report can be found at <a href="http://socialbodylab.com/sleepers/">here</a></p>
-
-
-  <h2>Objective</h2>
-  <p>Wearability:</p>
-  <ul>
-    <li>Aesthetic: Aesthetic is the main goal of Sleepers, we try to find a way to combine digital components into soft fabrics. The appearance of sleepers wouldn’t remind any of the electronics at the first impression as they are seamlessly embedded within the interlayer of the fabrics. Sleepers are minimalist design with just two pieces of white felts.  Geometric flower patterns are designed to go with the led on particle photon on the top, to show if the slippers are online and functional.</li>
-    <li>Comfort: Comfort is also another main goal when designing Sleepers as slippers themselves are supposed to be cozy when wearing at home, so comfortability and lightweight are the crucial elements. As the fact that human feet are very sensitive especially most people like to wear slippers with bare feet so we developed the layering technique to work with the rigid digital components. </li>
-    <li>Easy to use: Sleepers are very easy to use, the functionality is very simple just to focusing on whether it has been worn. The user can plug in the mini USB cable to charge the battery when it’s out of power.</li>
-    However, there are some limitations and future improvements for the Sleepers. The first one is the improvement for the position of charging port, either to find a way to extend the mini USB port or add an external led to replacing the onboard RGB status LED. The second one is the improvement of the power switch, it should be less electrical appearance.</p>
-  </ul>
-      <h2>Action</h2>
-      <img src="Projects/Sleepers/Sleepers_2.jpg" class='img_medium'>
-      <img src="Projects/Sleepers/Sleepers_3.jpg" class='img_medium'>
-<p></p>
-
     </div>
-  </div>
-</body>
-
-
-
-</body>
-
+  </body>
 </html>
