--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>Yiyi Shao</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
-    <link rel="icon" href="logo_White.png" />
+    <link rel="icon" href="logo_icon.png" />
   </head>
 
   <body>
