--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="icon" href="logo_White.png" />
+    <link rel="icon" href="logo_icon.png" />
   </head>
 
   <body>
