--- a/Flyer.html
+++ b/Flyer.html
@@ -1,42 +1,39 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Flyer</title>
+    <link rel="stylesheet" href="css/style2.css" />
+    <link rel="icon" href="logo_icon.png" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Flyer</title>
-  <link rel="stylesheet" href="css/style2.css">
-  <link rel="icon" href="logo_White.png">
-</head>
-
-<body>
-  <div class='wrapper'>
-  	<div id='Flyer'>
-      <div class='mouse-container'>
-        <div class='mouse'>
-          <span class='scroll-down'></span>
+  <body>
+    <div class="wrapper">
+      <div id="Flyer">
+        <div class="mouse-container">
+          <div class="mouse">
+            <span class="scroll-down"></span>
+          </div>
         </div>
       </div>
-  	</div>
-    <div id='content'>
-      <div id="closeicon">
-      <div class="outer">
-        <div class="inner">
-           <a href="portfolio.html"><label>Back</label></a>
+      <div id="content">
+        <div id="closeicon">
+          <div class="outer">
+            <div class="inner">
+              <a href="portfolio.html"><label>Back</label></a>
+            </div>
+          </div>
         </div>
+        <img src="Projects/Flyer/Flyer_1.png" class="img_small" />
+        <h1>Flyer Design</h1>
+        <h3>Created using Adobe Illustrator, Adobe Photoshop</h3>
+        <h2>Summary</h2>
+        <p>
+          Flyer design for Walk-on Exhibition at Plymouth University
+        </p>
+
+        <img src="Projects/Flyer/Flyer_2.jpg" class="img_medium" />
       </div>
     </div>
-      <img src="Projects/Flyer/Flyer_1.png" class='img_small'>
-      <h1>Flyer Design</h1>
-      <h3>Created using Adobe Illustrator, Adobe Photoshop</h3>
-      <h2>Summary</h2>
-  <p>
-    Flyer design for Walk-on Exhibition at Plymouth University
-  </p>
-
-        <img src="Projects/Flyer/Flyer_2.jpg" class='img_medium'>
-
-
-
-</body>
-
+  </body>
 </html>
