--- a/MaidenPink.html
+++ b/MaidenPink.html
@@ -1,92 +1,182 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>MaidenPink</title>
+    <link rel="stylesheet" href="css/style2.css" />
+    <link rel="icon" href="logo_icon.png" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>MaidenPink</title>
-  <link rel="stylesheet" href="css/style2.css">
-  <link rel="icon" href="logo_White.png">
-</head>
-
-<body>
-  <div class='wrapper'>
-  	<div id='MaidenPink'>
-      <div class='mouse-container'>
-        <div class='mouse'>
-          <span class='scroll-down'></span>
+  <body>
+    <div class="wrapper">
+      <div id="MaidenPink">
+        <div class="mouse-container">
+          <div class="mouse">
+            <span class="scroll-down"></span>
+          </div>
         </div>
       </div>
-  	</div>
-    <div id='content'>
-      <div id="closeicon">
-      <div class="outer">
-        <div class="inner">
-           <a href="portfolio.html"><label>Back</label></a>
+      <div id="content">
+        <div id="closeicon">
+          <div class="outer">
+            <div class="inner">
+              <a href="portfolio.html"><label>Back</label></a>
+            </div>
+          </div>
         </div>
+        <div class="video-wrapper">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/R-dknouvwcg"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+        <img src="Projects/MaidenPink/MaidenPink2.png" class="img_small" />
+        <h1>MaidenPink</h1>
+        <h3>Created using Adobe Photoshop, Wacom and Game Maker</h3>
+        <h2>Summary</h2>
+
+        <p>
+          In this cyber-fantasy setting, trying to make your way to Sanctuary is
+          hard enough as it is, but for Daughter, it’s even harder after Mother
+          gets hurt. Daughter has to learn how to take responsibility and fast,
+          before Mother fades to dust! Navigate through different zones, help
+          the Locals, and defeat the Final Boss in a top-down, action rpg,
+          coming of age story. Your decisions along the way will affect your
+          skills, so make sure to choose wisely!
+        </p>
+        <p>Group members: Roxanne Henry, Yiyi Shao, Dikla Sinai</p>
+        <p>My responsibilities: Animation, Character Design</p>
+
+        <p>
+          Full working diary can be found at
+          <a href="https://shao-yiyi.format.com/blog">here</a>
+        </p>
+        <p>
+          Download
+          <a
+            href="https://drive.google.com/open?id=138_7HyUf-9qz4ousf2WHVNRlZnB_0A_h"
+            >game</a
+          >
+          to play!
+        </p>
+        <h2>Objective</h2>
+        <p>
+          The primary emotional cue of Maiden Pink is the relationship between
+          mother and daughter. The game starts with the player being a little
+          girl and traveling with her mother in a fantasy world. The mother is
+          always protecting her child and won’t let the daughter away from her
+          sight. However, the mother gets injured seriously at the end of the
+          first level and can’t keep protecting the daughter through the
+          journey, so the player as a little girl needs to be independent and
+          learn skills and responsibility to save her mother. We all experienced
+          the time that always being protected by our parents and the moment we
+          have to learn to face the difficulties in life on our own. Women
+          especially experiencing tremendous growth in independence. As the
+          leading emotional cue reflects the life experience, the aesthetic
+          style also needs to be emphasized to evoke the childhood memory and
+          nostalgia emotion. Nostalgia can appeal to the audience on a
+          sentimental and emotive level. Retro style graphics then becomes a
+          more appropriate approach to achieve our primary goal. My own practice
+          and experiments for our game Maiden Pink are trying different methods
+          to create artworks in a retro style that bring the nostalgia-evoking
+          stimuli. All the artworks for Maiden Pink are created in very small
+          resolution (25 X 25 pixels) to mock the style of old games. Our
+          artistic style are mostly inspired by <i>Hyper Light Drifter</i>.
+        </p>
+        <h2>Action</h2>
+        <img src="Projects/MaidenPink/daughter.png" class="img_medium" />
+        <p>
+          Daughter: The player character. She is small and timid, often
+          depending on others for help and rescue. She is determined to become
+          more responsible and independent. Daughter has a lot of love, respect
+          and admiration for Mother.
+        </p>
+        <img src="Projects/MaidenPink/mother.png" class="img_medium" />
+        <img
+          src="Projects/MaidenPink/mom-final-attack.gif"
+          class="img_smallgif"
+        />
+        <img
+          src="Projects/MaidenPink/mom-back-get-hurt.gif"
+          class="img_smallgif"
+        />
+        <img
+          src="Projects/MaidenPink/mom-front-gethurt.gif"
+          class="img_smallgif"
+        />
+        <img
+          src="Projects/MaidenPink/mom-sit-gethurt.gif"
+          class="img_smallgif"
+        />
+        <img
+          src="Projects/MaidenPink/mom-front-idle-new.gif"
+          class="img_smallgif"
+        />
+        <img
+          src="Projects/MaidenPink/mom-animation-walking.gif"
+          class="img_smallgif"
+        />
+        <img
+          src="Projects/MaidenPink/mom-combat-idle-new.gif"
+          class="img_smallgif"
+        />
+        <img
+          src="Projects/MaidenPink/mom_animation_sidewalk.gif"
+          class="img_smallgif"
+        />
+        <img src="Projects/MaidenPink/mom-combat.gif" class="img_smallgif" />
+        <img
+          src="Projects/MaidenPink/mom-animation_walking_back.gif"
+          class="img_smallgif"
+        />
+        <p>
+          Mother: Capable, brave, strong and reliable. Mother is a veteran in
+          the post-apocalyptic world and has made it her priority to make sure
+          Daughter is safe. She may have sheltered her too much, which she comes
+          to regret after her injury.
+        </p>
+        <img src="Projects/MaidenPink/boss.png" class="img_medium" />
+        <p>
+          The Boss: The final boss of the game. An old guardian of Sanctuary
+          who’s programming has been corrupted. It takes the protection of
+          Sanctuary a little too seriously. It is the final obstacle for Mother
+          and Daughter to get through.
+        </p>
+        <img src="Projects/MaidenPink/monster.png" class="img_medium" />
+        <img
+          src="Projects/MaidenPink/monster_animation_walking_backside_shadow.gif"
+          class="img_smallgif"
+        />
+        <img
+          src="Projects/MaidenPink/monster_animation_walking_fontside_shadow.gif"
+          class="img_smallgif"
+        />
+        <img
+          src="Projects/MaidenPink/monster_combat_animation.gif"
+          class="img_smallgif"
+        />
+        <img src="Projects/MaidenPink/monster_eat.gif" class="img_smallgif" />
+
+        <p>
+          The Locals: These creatures are unique to each zone and can be
+          pacified by puzzle solving. If you decide to do a combat route
+          instead, these Locals are your primary enemy.
+        </p>
+        <img src="Projects/MaidenPink/frog.png" class="img_medium" />
+        <img
+          src="Projects/MaidenPink/Frog_walk_shadow.gif"
+          class="img_smallgif"
+        />
+        <p>
+          The Frog: The frogs are your friends. They will teach you a new skill.
+          Frogs are very good at jumping, and they can teach you how to do that
+          easily, as long as you complete the puzzle
+        </p>
       </div>
-      </div>
-      <div class="video-wrapper">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/R-dknouvwcg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
-      <img src="Projects/MaidenPink/MaidenPink2.png" class='img_small'>
-      <h1>MaidenPink</h1>
-      <h3>Created using Adobe Photoshop, Wacom and Game Maker</h3>
-      <h2>Summary</h2>
-
-  <p>
-    In this cyber-fantasy setting, trying to make your way to Sanctuary is hard enough as it is, but for Daughter, it’s even harder after Mother gets hurt. Daughter has to learn how to take responsibility and fast, before Mother fades to dust! Navigate through different zones, help the Locals, and defeat the Final Boss in a top-down, action rpg, coming of age story. Your decisions along the way will affect your skills, so make sure to choose wisely!
-  </p>
-  <p>Group members: Roxanne Henry, Yiyi Shao, Dikla Sinai</p>
-  <p>My responsibilities: Animation, Character Design</p>
-
-  <p>Full working diary can be found at <a href="https://shao-yiyi.format.com/blog">here</a></p>
-  <p>Download <a href="https://drive.google.com/open?id=138_7HyUf-9qz4ousf2WHVNRlZnB_0A_h">game</a> to play!</P>
-      <h2>Objective</h2>
-      <p>
-      The primary emotional cue of Maiden Pink is the relationship between mother and daughter. The game starts with the player being a little girl and traveling with her mother in a fantasy world. The mother is always protecting her child and won’t let the daughter away from her sight. However, the mother gets injured seriously at the end of the first level and can’t keep protecting the daughter through the journey, so the player as a little girl needs to be independent and learn skills and responsibility to save her mother.
-
-We all experienced the time that always being protected by our parents and the moment we have to learn to face the difficulties in life on our own. Women especially experiencing tremendous growth in independence. As the leading emotional cue reflects the life experience, the aesthetic style also needs to be emphasized to evoke the childhood memory and nostalgia emotion. Nostalgia can appeal to the audience on a sentimental and emotive level. Retro style graphics then becomes a more appropriate approach to achieve our primary goal.
-
-My own practice and experiments for our game Maiden Pink are trying different methods to create artworks in a retro style that bring the nostalgia-evoking stimuli.
-
-All the artworks for Maiden Pink are created in very small resolution (25 X 25 pixels) to mock the style of old games. Our artistic style are mostly inspired by <i>Hyper Light Drifter</i>.
-</p>
-      <h2>Action</h2>
-      <img src="Projects/MaidenPink/daughter.png" class='img_medium'>
-      <p>Daughter: The player character. She is small and timid, often depending on others for help and rescue. She is determined to become more responsible and independent. Daughter has a lot of love, respect and admiration for Mother.</p>
-      <img src="Projects/MaidenPink/mother.png" class='img_medium'>
-      <img src="Projects/MaidenPink/mom-final-attack.gif" class='img_smallgif'>
-      <img src="Projects/MaidenPink/mom-back-get-hurt.gif" class='img_smallgif'>
-      <img src="Projects/MaidenPink/mom-front-gethurt.gif" class='img_smallgif'>
-      <img src="Projects/MaidenPink/mom-sit-gethurt.gif" class='img_smallgif'>
-      <img src="Projects/MaidenPink/mom-front-idle-new.gif" class='img_smallgif'>
-      <img src="Projects/MaidenPink/mom-animation-walking.gif" class='img_smallgif'>
-      <img src="Projects/MaidenPink/mom-combat-idle-new.gif" class='img_smallgif'>
-      <img src="Projects/MaidenPink/mom_animation_sidewalk.gif" class='img_smallgif'>
-      <img src="Projects/MaidenPink/mom-combat.gif" class='img_smallgif'>
-      <img src="Projects/MaidenPink/mom-animation_walking_back.gif" class='img_smallgif'>
-      <p>
-      Mother: Capable, brave, strong and reliable. Mother is a veteran in the post-apocalyptic world and has made it her priority to make sure Daughter is safe. She may have sheltered her too much, which she comes to regret after her injury. </p>
-      <img src="Projects/MaidenPink/boss.png" class='img_medium'>
-      <p>
-        The Boss: The final boss of the game. An old guardian of Sanctuary who’s programming has been corrupted. It takes the protection of Sanctuary a little too seriously. It is the final obstacle for Mother and Daughter to get through.
-      </p>
-      <img src="Projects/MaidenPink/monster.png" class='img_medium'>
-      <img src="Projects/MaidenPink/monster_animation_walking_backside_shadow.gif" class='img_smallgif'>
-      <img src="Projects/MaidenPink/monster_animation_walking_fontside_shadow.gif" class='img_smallgif'>
-      <img src="Projects/MaidenPink/monster_combat_animation.gif" class='img_smallgif'>
-      <img src="Projects/MaidenPink/monster_eat.gif" class='img_smallgif'>
-
-      <p>
-        The Locals: These creatures are unique to each zone and can be pacified by puzzle solving. If you decide to do a combat route instead, these Locals are your primary enemy.
-      </p>
-      <img src="Projects/MaidenPink/frog.png" class='img_medium'>
-      <img src="Projects/MaidenPink/Frog_walk_shadow.gif" class='img_smallgif'>
-      <p>
-        The Frog: The frogs are your friends. They will teach you a new skill. Frogs are very good at jumping, and they can teach you how to do that easily, as long as you complete the puzzle
-      </p>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
