--- a/Teleportation.html
+++ b/Teleportation.html
@@ -1,55 +1,54 @@
 <!DOCTYPE html>
-<html lang="en" >
-
-<head>
-  <meta charset="UTF-8">
-  <title>Teleportation</title>
-
-
-
-      <link rel="stylesheet" href="css/style2.css">
-
-
-</head>
-
-<body>
-
+<html lang="en">
   <head>
-  <title>Teleportation</title>
-</head>
+    <meta charset="UTF-8" />
+    <title>Teleportation</title>
 
-<body>
+    <link rel="stylesheet" href="css/style2.css" />
+    <link rel="icon" href="logo_icon.png" />
+  </head>
 
-  <div class='wrapper'>
-  	<div id='Teleportation'>
-      <div class='mouse-container'>
-        <div class='mouse'>
-          <span class='scroll-down'></span>
+  <body>
+    <head>
+      <title>Teleportation</title>
+    </head>
+
+    <body>
+      <div class="wrapper">
+        <div id="Teleportation">
+          <div class="mouse-container">
+            <div class="mouse">
+              <span class="scroll-down"></span>
+            </div>
+          </div>
+        </div>
+        <div id="content">
+          <div id="closeicon">
+            <div class="outer">
+              <div class="inner">
+                <a href="portfolio.html"><label>Back</label></a>
+              </div>
+            </div>
+          </div>
+          <img
+            src="Projects/Teleportation/Teleportation.jpg"
+            class="img_small"
+          />
+          <h1>Teleportation</h1>
+          <p>Created using Arduino and P5.js</p>
+          <h2>Summary</h2>
+          <p>
+            According to Moore’s Law, technology is developing so fast these
+            days. We have no idea what the transportation will be like in the
+            future, just like people from 500 years ago have no idea we can
+            cross the Atlantic within a day by airplane. Let’s take a peak from
+            this interactive installation and to feel what’s teleportation or
+            even worse, what if something goes wrong in this process?
+          </p>
+
+          <h1 class="footer">...</h1>
         </div>
       </div>
-  	</div>
-    <div id='content'>
-      <div id="closeicon">
-      <div class="outer">
-        <div class="inner">
-           <a href="portfolio.html"><label>Back</label></a>
-        </div>
-      </div>
-      </div>
-      <img src="Projects/Teleportation/Teleportation.jpg" class='img_small'>
-      <h1>Teleportation</h1>
-      <p>Created using Arduino and P5.js</p>
-      <h2>Summary</h2>
-  <p>According to Moore’s Law, technology is developing so fast these days. We have no idea what the transportation will be like in the future, just like people from 500 years ago have no idea we can cross the Atlantic within a day by airplane. Let’s take a peak from this interactive installation and to feel what’s teleportation or even worse, what if something goes wrong in this process?</p>
-
-
-      <h1 class='footer'>...</h1>
-    </div>
-  </div>
-</body>
-
-
-
-</body>
-
+    </body>
+  </body>
 </html>
