--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
-    <link rel="icon" href="logo_White.png" />
+    <link rel="icon" href="logo_icon.png" />
   </head>
 
   <body>
