--- a/RABBOT.html
+++ b/RABBOT.html
@@ -69,35 +69,41 @@
         </p>
 
         <h2>Action</h2>
-        <h4>1.Roadmap</h4>
+        <h4>1.Ideation</h4>
+        <img src="Projects/RABBOT/Sketch.jpg" class="img_medium" />
+        <img src="Projects/RABBOT/PostNotes.jpg" class="img_medium" />
+        <h4>2.Roadmap</h4>
         <p>
           Project management for both written document and prototype making.
         </p>
         <img src="Projects/RABBOT/roadmap.jpg" class="img_medium" />
-        <h4>2.Concenptual Framework</h4>
+        <h4>3.Concenptual Framework</h4>
         <p>
           A diagram to define possible users, solutions and relationships among
           them.
         </p>
         <img src="Projects/RABBOT/Methdology.jpg" class="img_medium" />
-        <h4>3.Prototype Map</h4>
+        <h4>4.Prototype Map</h4>
         <p>
           I made four iterative prototypes and extracted useful approaches after
           evalutions.
         </p>
         <img src="Projects/RABBOT/PrototypeMap.jpg" class="img_medium" />
-        <h4>3.System Overview</h4>
+        <h4>5.System Overview</h4>
         <img src="Projects/RABBOT/SystemDiagram.jpg" class="img_medium" />
-        <h4>3.Workflow</h4>
+        <h4>6.Workflow</h4>
         <img src="Projects/RABBOT/Workflow.jpg" class="img_large" />
-        <h4>4.Colors & Typography</h4>
+        <h4>7.Colors & Typography</h4>
         <img src="Projects/RABBOT/Background.JPG" class="img_large" />
         <img src="Projects/RABBOT/ColorsTypography.jpg" class="img_medium" />
-        <h4>5.Branding & UI</h4>
+        <h4>8.Branding & UI</h4>
         <img src="Projects/RABBOT/RabbotBranding.jpg" class="img_large" />
         <img src="Projects/RABBOT/RabbotUI.jpg" class="img_large" />
         <img src="Projects/RABBOT/Rabbot3D.png" class="img_medium" />
         <img src="Projects/RABBOT/object.png" class="img_medium" />
+        <h4>9.User Testing</h4>
+        <img src="Projects/RABBOT/Usertesting.gif" class="img_medium" />
+        <img src="Projects/RABBOT/UsertestingResults.png" class="img_medium" />
 
         <h2>Exhibits</h2>
         <img src="Projects/RABBOT/TMAC.png" class="img_medium" />
